--- a/src/projects.json
+++ b/src/projects.json
@@ -3,42 +3,42 @@
     {
       "_id ": 1,
       "href": "https://samrod777.github.io/Recipe-List-Platform",
-      "src": "/public/assets/Project1.png",
+      "src": "/assets/Project1.png",
       "alt": "Screenshot of project #1, it shows a martini with ingredients and instructions on how to make it",
       "stripe": "Food & Drinks Recipes"
     },
     {
       "_id ": 2,
       "href": "https://samrod777.github.io/Weather-Dashboard-HW6",
-      "src": "/public/assets/weather-dashboard.png",
+      "src": "/assets/weather-dashboard.png",
       "alt": "Screenshot of Weather dashboard app",
       "stripe": "Wheather dashboard"
      },
     {
       "_id ": 3,
       "href": "https://samrod777.github.io/Work-Day-Scheduler-HW5/",
-      "src": "public/assets/Day-scheduler.png",
+      "src": "/assets/Day-scheduler.png",
       "alt": "Screenshot of the Day Scheduler app",
       "stripe": "Workday Scheduler"
      },
      {
       "_id ": 4,
       "href": "https://fathomless-retreat-85881.herokuapp.com/",
-      "src": "public/assets/Eat-da-burger-screenshot.png",
+      "src": "/assets/Eat-da-burger-screenshot.png",
       "alt": "Screenshot of the Eat-da-burger app",
       "stripe": "Eat Da Burger!"
      },
      {
       "_id ": 5,
       "href": "https://samrod777.github.io/employee-directory/",
-      "src": "public/assets/EmpDir.png",
+      "src": "/assets/EmpDir.png",
       "alt": "Screenshot of Employee Directory app",
       "stripe": "Employee Directory"
      },
      {
       "_id ": 6,
       "href": "https://protected-crag-05436.herokuapp.com",
-      "src": "public/assets/FitnessTracker.png",
+      "src": "/assets/FitnessTracker.png",
       "alt": "Screenshot of Fitness Tracker dashboard",
       "stripe": "Fitness Tracker"
      }
